tests/positive/basic/array_count_string/input.ci
void main() { string[] xs = ["a", "b"]; print(toString(count(xs)) + "\n"); }
