tests/negative/runtime/arrayremove_large_index/input.ci
void main() {
    int[] xs = [1];
    arrayRemove(xs, 99);
}
